[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/objects/item.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main.gd" type="Script" id=2]
[ext_resource path="res://src/objects/ui/HealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/WigglyCurvesRegular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
item_scene = ExtResource( 1 )
background_type = 4

[node name="MessageGroup" type="Node2D" parent="."]
position = Vector2( 500, 20 )
z_index = 101

[node name="MessageLabel" type="Label" parent="MessageGroup"]
margin_right = 300.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "Prepearing..."
align = 1
valign = 1

[node name="EnemyHealthBar" parent="." instance=ExtResource( 4 )]
position = Vector2( 960, 20 )
z_index = 100

[node name="PlayerHealthBar" parent="." instance=ExtResource( 4 )]
position = Vector2( 20, 20 )
z_index = 100

[node name="GameArea" type="Node2D" parent="."]
position = Vector2( 320, 64 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="PlayerTimer" type="Timer" parent="."]

[node name="GameTimer" type="Timer" parent="."]

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="BackgroundGroup" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="BackgroundGroup"]
margin_top = -300.0
margin_right = 3840.0
margin_bottom = 1860.0
rect_scale = Vector2( 0.5, 0.5 )

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="PlayerTimer" to="." method="_on_PlayerTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
